cambios varios en las acciones @mauripiccolo @damianVelazquezCafaro @jorgeMendiola